vehicle/tests/golden/error/dataset/negativeNat/dataset-int-4.idx
../../../../datasets/dataset-int-4.idx